fix: Alignment of camera icon

--- a/cmd/fibr/static/styles/main.css
+++ b/cmd/fibr/static/styles/main.css
@@ -137,7 +137,7 @@ a:hover {
 }
 
 .icon-bottom {
-  vertical-align: bottom;
+  vertical-align: sub;
 }
 
 .icon-large {
